park-n-go/app/view/index.css
.card{
    border: 1px solid hsl(0, 0%, 80%);
    /* border-radius: 20%; */
    border-radius: 20px;
    box-shadow: 4px 4px 4px hsla(0, 0%, 0%, 0.1);
    background-color: hsl(207, 100%, 94%);
    /* padding: 10%; */
    padding: 16px;
    /* margin: 10%; */
    text-align: left;
    height: auto;
    /* height: 40vh; */
    
    /* display: inline-block; */


}

.btn {
    /* background: hsl(200, 100%, 50%, 1); */
    /* border: 1px solid hsl(200, 100%, 50%); */
    /* color: hsl(200, 100%, 50%); */
    padding: 0.25em 0.5em;
    border-radius: 0.25em;
    width: 100%;
    cursor: pointer;
    outline: none;
}

